Adding the nav-menu list inside the header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
   <body>
     <main id="main-section">
       <header id="nav-bar">
+        <ul id="nav-menu">
+          <li>
+            <a href="#"><span class="fab fa-apple"></span></a>
+          </li>
+          <li><a href="#store">Store</a></li>
+          <li><a href="#mac">Mac</a></li>
+          <li><a href="#ipod">iPod</a></li>
+          <li><a href="#iphone">iPhone</a></li>
+          <li><a href="#ipad">iPad</a></li>
+          <li><a href="#itune">iTunes</a></li>
+          <li><a href="#support">Support</a></li>
 
+          <label class="search">
+            <input type="text" name="search" />
+          </label>
+        </ul>
       </header>
+      
       <div id="main-text">
 
       </div>
