Added the main-text in the index file

--- a/index.html
+++ b/index.html
@@ -32,9 +32,19 @@
           </label>
         </ul>
       </header>
-      
-      <div id="main-text">
 
+      <div id="main-text">
+        <h1 class="main-text-header">
+          What will your verse be?
+        </h1>
+        <p class="main-text-paragraph">
+          Everyone has something to share. See how people are using iPad in
+          their unique ways to add to the world's story.
+        </p>
+        <p class="main-text-paly">
+          <a class="link" href="#">Watch the "Your Verse" film and explore the stories</a>
+          <i class="far fa-play-circle"></i>
+        </p>
       </div>
     </main>
     <div id="banners">
