Adding the main page content, the banners and the footer

--- a/index.html
+++ b/index.html
@@ -48,14 +48,49 @@
       </div>
     </main>
     <div id="banners">
-
+      <a id="banner-1" href="#"></a>
+      <a id="banner-2" href="#"></a>
+      <a id="banner-3" href="#"></a>
+      <a id="banner-4" href="#"></a>
     </div>
 
     <footer id="footer">
       <div id="footer-info">
-
+        <p>
+          Shop the <a href="#">Apple Online Store</a>
+          (1-800-MY-APPLE), visit an
+          <a href="#">Apple Retail Store</a>
+          , or find a
+          <a href="#">reseller</a>
+          .
+        </p>
+        <p>
+          Copyright &copy; 2014 Apple Inc. All rights reserved.
+          <a href="#">Terms of Use </a>
+          |
+          <a href="#">Privacy Policy </a>
+        </p>
       </div>
       <div id="footer-menu">
+        <p>
+          <a href="#">Site Map</a>
+          |
+          <a href="#">Hot News</a>
+          |
+          <a href="#">RSS Feeds</a>
+          |
+          <a href="#">Media Info</a>
+          |
+          <a href="#">Environment</a>
+          |
+          <a href="#">Job Opportunities</a>
+          |
+          <a href="#">Contact Us</a>
+          |
+        </p>
+        <a href="#">
+          <img src="./assets/images/usa_flag.png" alt="language flag" />
+        </a>
 
       </div>
     </footer>
