did some changes in the css an the index file and added some new images
- Changed play circle in the main text play to a background image

- Changed the background hover in the nav menu from solid color to a 4 repeated images as the orginal website is doing.

- Changed the Apple icon color from white solid color to a linear gradient.

- Changed the text to a blurry text by adding a text-shadow and transparent color so it can be more similar to the orginal website ( **Note: The orginal website is using images for the text)

- Changed the main text "hyperlink" hover underline from text decoration to border bottom to make it thinner

--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
           <li><a href="#ipad">iPad</a></li>
           <li><a href="#itune">iTunes</a></li>
           <li><a href="#support">Support</a></li>
-
-          <label class="search">
+          <li><label class="search">
             <input type="text" name="search" />
-          </label>
+          </label></li>
         </ul>
       </header>
 
@@ -43,7 +42,6 @@
         </p>
         <p class="main-text-paly">
           <a class="link" href="#">Watch the "Your Verse" film and explore the stories</a>
-          <i class="far fa-play-circle"></i>
         </p>
       </div>
     </main>
